...
    required this.topicConfig,
  });

  @override
  Widget build(BuildContext context) {
    return GestureDetector(
      key: const Key('basicInfoRead_container_section'),
      onTap: () => context.read<BasicInfoBloc>().add(const BasicInfoEditModeEntered()),
      child: Container(
        color: const Color(0xFFE8F4F8),
        child: ListView(
          shrinkWrap: true,
          physics: const NeverScrollableScrollPhysics(),
...
