...
  final int insertAfterSeq;
  const _InsertIndicator({required this.insertAfterSeq});

  @override
  Widget build(BuildContext context) {
    final key = insertAfterSeq == -1
        ? const Key('michiInfo_button_insertIndicator_head')
        : Key('insert_indicator_$insertAfterSeq');
    return GestureDetector(
      key: key,
      onTap: () => context
          .read<MichiInfoBloc>()
          .add(MichiInfoInsertPointSelected(insertAfterSeq)),
...
